# data-types-a-la-carte

./: .editorconfig  .gitignore  CHANGELOG.md  Readme.md  dtalacarte.cabal  dtalacarte.opam  dune-project
app/: Cata.hs  Eval.hs  Example.hs  Fold.hs  Free.hs  FreeRun.hs  Inject.hs  Main.hs  Mutual.hs  OldDays.hs  Syntax.hs
lib/: Ast.ml  dune
