(lang dune 3.6)

(name dtalacarte)

(generate_opam_files true)

(source
 (github LighghtEeloo/data-types-a-la-carte))

(authors "LighghtEeloo")

(maintainers "LighghtEeloo")

(license Apache-2.0)

; (documentation https://url/to/documentation)

(package
 (name dtalacarte)
 (synopsis "A quick tour to *Data types à la carte* for reading group presentation.")
;  (description "A quick tour to *Data types à la carte* for reading group presentation.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
